# agentic-knowledge-base

./: .ci.test.env  .env.sample  .gemini.plan.example.md  .gitignore  .test.env.sample  GEMINI.md  GETTING_STARTED.md  Makefile  README.md  conftest.py  environment.yml  pyproject.toml
.github/: macos-docker.md
.github/actions/docker-build/: action.yml
.github/actions/docker-pull/: action.yml
.github/workflows/: Dockerfile  README.md  docker-build.yml  make.yml  test-build.yml  test-hygiene.yml  test-integration.yml  test-unit.yml
agent-prompts/: README.md  agents-intelligence.md  agents-knowledge.md  agents-planner.md  agents-research-url-selector-prompt.md  agents-research.md
app/: main.py  pyproject.toml
app/agents/: pyproject.toml
app/agents-core/: pyproject.toml
app/agents-core/src/: __init__.py
app/agents-core/tests/: test_agent_definition_reader.py  test_agent_llm_error.py  test_core.py
app/agents-intelligence/: pyproject.toml
app/agents-intelligence/src/: __init__.py
app/agents-intelligence/tests/: test_intelligence_agent.py  test_intelligence_agent_integration.py  test_intelligence_agent_unit.py  test_intelligence_models.py  test_models.py
app/agents-knowledge/: pyproject.toml
app/agents-knowledge/src/: __init__.py
app/agents-knowledge/tests/: test_knowledge_agent.py  test_knowledge_agent_integration.py  test_knowledge_agent_unit.py  test_knowledge_models.py
app/agents-orchestrator/: pyproject.toml
app/agents-orchestrator-crewai/: pyproject.toml
app/agents-orchestrator-crewai/src/: __init__.py
app/agents-orchestrator-crewai/tests/: test_adapter.py  test_crewai_tool_adapter_integration.py  test_integration_adapter.py  test_llm_agent_flow.py  test_llm_tool_use.py  (+2 more)
app/agents-orchestrator-factory/: pyproject.toml
app/agents-orchestrator-langchain/: pyproject.toml
app/agents-planner/: pyproject.toml
app/agents-research/: pyproject.toml
app/agents-retrieval/: pyproject.toml
app/integration/: pyproject.toml
app/integration-documentation/: pyproject.toml
app/integration-documentation-outline/: pyproject.toml
app/integration-llm/: pyproject.toml
app/integration-scraper/: pyproject.toml
app/integration-search/: pyproject.toml
app/integration-vectordb/: pyproject.toml
app/integration-vectordb-qdrant/: pyproject.toml
app/integration_llm/: pyproject.toml
app/runner/: pyproject.toml
app/utils/: pyproject.toml
config/: config.mk
docker/outline/: README.md  docker-compose.yml  manage_env.yml  manage_secret.yml
docker/outline_test_env/: docker-compose.yml  docker.env
docs/: crewai_orchestrator.md  decisions.md
prompts/: 05-agent-orchestrator-interface-prompt.md  06-agent-orchestrator-interface-implementation-plan-prompt.md  07-agent-orchestrator-implementation-prompt.md  08-agent-orchestrator-implementation-prompt-integration-test-prompt.md  09-agent-orchestrator-implementation-integration-test-execution-prompt.md  10-agent-planner-implementation-plan-prompt.md  11-agent-planner-implementation-prompt.md  12-agent-research-implementation-plan-prompt.md  13-agent-research-implementation-prompt.md  14-agent-intelligence-implementation-plan-prompt.md  15-agent-intelligence-implementation-prompt.md  16-agent-knowledge-implementation-plan-prompt.md  17-agent-knowledge-implementation-prompt.md  18-agent-retrieval-implementation-plan-prompt.md  19-agent-retrieval-implementation-prompt.md  20-end-to-end-orchestration-implementation-plan-prompt.md  agent-orchestrator-prompt.md  agent-orchestrator-refined-prompt.md  idea-prompt.md  initial-implementation-prompt.md
prompts/chatgpt/: 01-idea-deep-research.md  02-initial-implementation-deep-research.md  03-agent-orchestrator-think.md  04-agent-orchestrator-refined-think.md  05-agent-orchestrator-interfaces-think.md  agent-orchestrator-refined-think.md  agent-orchestrator-think.md  initial-implementation-deep-research.md
prompts/claude/: 02-initial-implementation-opus-4.1.md  04-agent-orchestrator-refined-sonnet-4.md  05-agent-orchestrator-interfaces-sonnet-4.md  agent-orchestrator-sonnet-4.md  idea-opus-4.1-extended-thinking.md  initial-implementation-opus-4.1.md
prompts/copilot/: 01-idea-deep-research.md  02-initial-implementation-smart.md  03-agent-orchestrator-think-deeper.md  05-agent-orchestrator-interface-think-deeper.md  agent-orchestrator-refined-think-deeper.md  idea-deep-research.md  initial-implementation-smart.md
prompts/deepseek/: 01-idea-deepthink-search.md  02-initial-implementation-deepthink.md  03-agent-orchestrator-deepthink.md  04-agent-orchestrator-refined-deepthink.md  05-agent-orchestrator-interface-deepthink.md  agent-orchestrator-deepthink.md  idea-deepthink-search.md
prompts/gemini/: 01-idea-gemini-2.5-pro-deep-research.md  02-initial-implementation-gemini-2.5-pro-deep-research.md  03-agent-orchestrator-gemini-2.5-pro.md  05-agent-orchestrator-interface-gemini-2.5-pro-deep-research.md  agent-orchestrator-refined-gemini-2.5-pro.md  idea-ai-studio.md  idea-gemini-pro-deep-research.md
prompts/gemini-cli/: 06-agent-orchestrator-interface-implementation-plan-gemini-2.5-pro.md  07-agent-orchestrator-implementation-gemini-cli.md  10-agent-planner-implementation-plan.md  12-agent-research-implementation-plan.md  14-agent-intelligence-implementation-plan.md  15-agent-intelligence-implementation.md  16-agent-knowledge-implementation-plan.md  18-agent-retrieval-implementation-plan.md  20-end-to-end-orchestraction-implementation-plan.md
prompts/grok/: 05-agent-orchestrator-interface-expert.md  agent-orchestrator-expert.md  agent-orchestrator-refined-expert.md  grok-expert.md  initial-implementation-expert.md
prompts/qwen/: 02-initial-implementation-qwen3-235b-a22b-2507.md  03-agent-orchestrator-qwen3-235b-a22b-2507-thinking.md  04-agent-orchestrator-refined-qwen3-235b-a22b-2507-thinking.md  05-agent-orchestrator-interface-qwen3-235b-a22b-2507-thinking.md  idea-qwen3-235b-a22b-2507.md
prompts/template/: README.md  gemini-example.md  system.md  vibe-coding-template-example.md
scripts/: check_circular_dependencies.sh  run_integration_tests.sh
(+118 files in other folders)
