[project]
name = "agentic-knowledge-base"
version = "0.1.0"
description = "A project to manage and query a knowledge base using agentic workflows."
readme = "README.md"

requires-python = "==3.12.11"

dependencies = [
    "agents-core",
    "agents-intelligence",
    "agents-knowledge",
    "agents-orchestrator-crewai",
    "agents-orchestrator-langchain",
    "agents-planner",
    "agents-research",
    "agents-retrieval",
    "integration-documentation",
    "integration-llm",
    "integration-scraper",
    "integration-search",
    "integration-vectordb",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N", "UP", "B", "A", "C4", "T20", "SIM", "PTH"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
agents-core = { path = "app/agents-core" }
agents-intelligence = { path = "app/agents-intelligence" }
agents-knowledge = { path = "app/agents-knowledge" }
agents-orchestrator-crewai = { path = "app/agents-orchestrator/crewai" }
agents-orchestrator-langchain = { path = "app/agents-orchestrator/langchain" }
agents-planner = { path = "app/agents-planner" }
agents-research = { path = "app/agents-research" }
agents-retrieval = { path = "app/agents-retrieval" }
integration-documentation = { path = "app/integration-documentation" }
integration-llm = { path = "app/integration-llm" }
integration-scraper = { path = "app/integration-scraper" }
integration-search = { path = "app/integration-search" }
integration-vectordb = { path = "app/integration-vectordb" }

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "ruff==0.13.2",
]

[tool.pytest.ini_options]
pythonpath = [
    "app/agents-core/src",
    "app/agents-intelligence/src",
    "app/agents-knowledge/src",
    "app/agents-orchestrator/crewai/src",
    "app/agents-orchestrator/langchain/src",
    "app/agents-planner/src",
    "app/agents-research/src",
    "app/agents-retrieval/src",
    "app/integration-documentation/src",
    "app/integration-llm/src",
    "app/integration-scraper/src",
    "app/integration-search/src",
    "app/integration-vectordb/src",
]
testpaths = [
    "app/agents-core/tests",
    "app/agents-intelligence/tests",
    "app/agents-knowledge/tests",
    "app/agents-orchestrator/crewai/tests",
    "app/agents-orchestrator/langchain/tests",
    "app/agents-planner/tests",
    "app/agents-research/tests",
    "app/agents-retrieval/tests",
    "app/integration-documentation/tests",
    "app/integration-llm/tests",
    "app/integration-scraper/tests",
    "app/integration-search/tests",
    "app/integration-vectordb/tests",
]
