[project]
name = "agentic-knowledge-base"
version = "0.1.0"
description = "A project to manage and query a knowledge base using agentic workflows."
readme = "README.md"

requires-python = "==3.12.11"

dependencies = [
    "agents-core",
    "agents-intelligence",
    "agents-knowledge",
    "agents-orchestrator-crewai",
    "agents-orchestrator-factory",
    "agents-orchestrator-langchain",
    "agents-planner",
    "agents-research",
    "agents-retrieval",
    "integration-documentation",
    "integration-documentation-outline",
    "integration-llm",
    "integration-scraper",
    "integration-search",
    "integration-vectordb",
    "runner",
    "structlog==25.4.0",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N", "UP", "B", "A", "C4", "T20", "SIM", "PTH"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
agents-core = { path = "app/agents-core", editable = true }
agents-intelligence = { path = "app/agents-intelligence", editable = true }
agents-knowledge = { path = "app/agents-knowledge", editable = true }
agents-orchestrator-crewai = { path = "app/agents-orchestrator-crewai", editable = true }
agents-orchestrator-factory = { path = "app/agents-orchestrator-factory", editable = true }
agents-orchestrator-langchain = { path = "app/agents-orchestrator-langchain", editable = true }
agents-planner = { path = "app/agents-planner", editable = true }
agents-research = { path = "app/agents-research", editable = true }
agents-retrieval = { path = "app/agents-retrieval", editable = true }
integration-documentation = { path = "app/integration-documentation", editable = true }
integration-documentation-outline = { path = "app/integration-documentation-outline", editable = true }
integration-llm = { path = "app/integration-llm", editable = true }
integration-scraper = { path = "app/integration-scraper", editable = true }
integration-search = { path = "app/integration-search", editable = true }
integration-vectordb = { path = "app/integration-vectordb", editable = true }
runner = { path = "app/runner", editable = true }

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "ruff==0.14.0",
    "ansible==12.2.0",
]

[project.optional-dependencies]
crewai = [
    "crewai==0.203.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
    "ignore:Pydantic serializer warnings:UserWarning",
    "ignore:Use 'content=<...>' to upload raw bytes/text content.:DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests",
]
pythonpath = [
    "app/agents-core/src",
    "app/agents-intelligence/src",
    "app/agents-knowledge/src",
    "app/agents-orchestrator-crewai/src",
    "app/agents-orchestrator-factory/src",
    "app/agents-orchestrator-langchain/src",
    "app/agents-planner/src",
    "app/agents-research/src",
    "app/agents-retrieval/src",
    "app/integration-documentation/src",
    "app/integration-documentation-outline/src",
    "app/integration-llm/src",
    "app/integration-scraper/src",
    "app/integration-search/src",
    "app/integration-vectordb/src",
    "app/runner/src",
]
testpaths = [
    "app/agents-core/tests",
    "app/agents-intelligence/tests",
    "app/agents-knowledge/tests",
    "app/agents-orchestrator-crewai/tests",
    "app/agents-orchestrator-factory/tests",
    "app/agents-orchestrator-langchain/tests",
    "app/agents-planner/tests",
    "app/agents-research/tests",
    "app/agents-retrieval/tests",
    "app/integration-documentation/tests",
    "app/integration-documentation-outline/tests",
    "app/integration-llm/tests",
    "app/integration-scraper/tests",
    "app/integration-search/tests",
    "app/integration-vectordb/tests",
    "app/runner/tests",
]
